# services/gateway/internal/security/routes.gen.go
@@ -58,4 +58,7 @@ var Routes = []Route{
 	{Method: "GET", Path: "/users/{username}", OperationID: "getUser", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"read:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptNever},
 	{Method: "PATCH", Path: "/users/{username}", OperationID: "updateUser", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"write:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptNever},
 	{Method: "PUT", Path: "/users/{username}/password", OperationID: "changePassword", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"write:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptSelf},
+	{Method: "GET", Path: "/users/{username}/tokens", OperationID: "listUserTokens", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"write:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptNever},
+	{Method: "POST", Path: "/users/{username}/tokens", OperationID: "createUserToken", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"write:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptNever},
+	{Method: "DELETE", Path: "/users/{username}/tokens/{tokenId}", OperationID: "revokeUserToken", Service: ServiceIdentity, Public: false, Credentials: []CredentialKind{CredentialSession, CredentialToken}, Scopes: []string{"write:user"}, Permission: PermissionNone, PasswordChangeExempt: ExemptNever},
 }
